# embeddings

./: README.md  main.py  pyproject.toml
notebooks/: cross_entrophy.ipynb  embeddings.ipynb
notebooks/.ipynb_checkpoints/: embeddings-checkpoint.ipynb
