[project]
name = "my-project-embeddings"
version = "0.1.0"
description = "Projekt embeddings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]

[dependency-groups]
dev = []
